# reader

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  package.json  tsconfig.json
apps/reader-app/: .env.local.example  .env.tauri  .env.tauri.example  .env.web.example  AGENTS.md  components.json  package.json  release-notes.json  tailwind.config.ts  wrangler.toml
apps/reader-app/docs/: testing.md
apps/reader-app/extensions/windows-thumbnail/: Cargo.toml  README.md
apps/reader-app/extensions/windows-thumbnail/src/: com_provider.rs  extraction.rs  mod.rs
apps/reader-app/public/: manifest.json
apps/reader-app/public/.well-known/: org.flathub.VerifiedApps.txt
apps/reader-app/scripts/: sync-release-notes.sh
apps/reader-app/src/: sw.ts
apps/reader-app/src-tauri/: Cargo.toml  Info-ios.plist  Info.plist  build.rs  tauri.conf.json  tauri.windows.conf.json
apps/reader-app/src-tauri/icons/: icon.icns
apps/reader-app/src-tauri/nsis/: installer-hooks.nsh
apps/reader-app/src-tauri/src/: dir_scanner.rs  discord_rpc.rs  lib.rs  main.rs  transfer_file.rs
apps/reader-app/src/app/: error.tsx  layout.tsx
apps/reader-app/src/components/: AboutWindow.tsx  Alert.tsx  Dropdown.tsx  HighlighterIcon.tsx  Menu.tsx  MenuItem.tsx  Popup.tsx  Providers.tsx  Select.tsx  Spinner.tsx  SupportLinks.tsx  Toast.tsx  UpdaterWindow.tsx  WindowButtons.tsx
apps/reader-app/src/context/: DropdownContext.tsx
apps/reader-app/src/helpers/: openWith.ts  settings.ts  shortcuts.ts
apps/reader-app/src/hooks/: useAvailablePlans.ts  useBackgroundTexture.ts  useDiscordPresence.ts  (+10 more)
(+196 files in other folders)
