[package]
name = "windows_thumbnail"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[lib]
name = "windows_thumbnail"
path = "src/mod.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
base64 = "0.22"
directories-next = "2.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
md5 = "0.8"
once_cell = "1.19"
zip = { version = "6.0", default-features = false, features = ["deflate"] }
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_Registry",
  "Win32_UI_Shell",
] }
windows-core = "0.62"
